frontend/src/styles/learn.scss
@use 'sass:color';

@use 'variables' as v;

// theme overrides
img {
    &.dark-mode-invert-image {
        -webkit-filter: invert(0.9);
        filter: invert(0.9);
    }
    &.dark-mode-light-background {
        background-color: lightgrey !important;
    }
}

.btn {
    background-color: v.$color-theme-bg-dark;
    color: #fff;
    padding: 10px;
    font-family: v.$lato-sans-serif-font;
    font-size: 16px;

    &:hover {
        background-color: color.scale(v.$color-theme-bg-dark, $lightness: 30%);
    }
}

.admonition-in-other-languages {
    background: v.$color-theme-alt-bg;
    padding: 12px;
    margin-bottom: 24px;
}

.rst-content {
    .highlight {
        background: #ebf4f9;
    }
}

// theme overrides
// widget
pre.widget {
    white-space: normal;
    padding-bottom: 10px;
    position: relative;
}

.tab {
    display: flex;
    flex-wrap: nowrap;
    overflow-x: auto;
    -webkit-overflow-scrolling: touch;
    margin-bottom: 10px;

    button {
        background-color: inherit;
        float: left;
        outline: none;
        cursor: pointer;
        padding: 6px 16px;
        transition: 0.3s;
        flex: 0 0 auto;
        border: 1px solid transparent;
        color: v.$color-tab-font;
        font-family: v.$mono-font;
        font-size: 13px;
        border-left: 1px dotted v.$color-widget-border;
        border-right: 1px dotted v.$color-widget-border;
        border-bottom: 1px dotted v.$color-widget-border;
        &:hover {
            background-color: color.scale(v.$color-theme-bg-dark, $lightness: 30%);
            color: v.$color-tab-hover-font;
            cursor: pointer;
        }
        &.active {
            color: v.$color-tab-active-font;
            border-left: 1px solid v.$color-widget-border;
            border-right: 1px solid v.$color-widget-border;
            border-bottom: 3px solid v.$color-theme-bg-dark;
        }
    }
}

.tab-content {
    display: none;
    padding: 0px;
}

.settings-bar {
    background-color: v.$color-settingsbar-bg;
    color: v.$color-settingsbar-fg;
    font-family: v.$lato-sans-serif-font;
    padding-left: 13px;
    display: block;
    margin-top: 0px;

    button {
        background-color: v.$color-settingsbar-bg;
        color: v.$color-settingsbar-fg;
        opacity: 0.5;
        padding: 5px;
        margin-left: 5px;
        margin-right: 5px;
        font-size: 13px;
        border: none;

        &:hover {
            opacity: 1.0;
        }
    }

    .dropdown-container {
        position: relative;
        display: inline-block;

        .dropdown-content {
            display: none;
            position: absolute;
            background-color: v.$color-theme-bg-light;
            min-width: 300px;
            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
            z-index: 10;
            padding: 8px;
            cursor: pointer;
            -webkit-user-select: none;
            -moz-user-select: none;
            -ms-user-select: none;
            user-select: none;

            a {
                color: black;
                padding: 12px 16px;
                text-decoration: none;
                display: block;

                &:hover {
                    background-color: #ddd;
                }
            }
        }

        &:hover {
            .dropdown-content {
                display: block;
            }
            .dropdown-btn {
                opacity: 1.0;
            }
        }
    }
}

div {
    .compiler-switch-entry {
        overflow: hidden;
    }

    .compiler-switch-name {
        float: left;
    }

    .compiler-switch-help {
        float: right;
    }

    .compiler-switches-entries {
        padding: 10px;
        transition: 1.0s;
    }
}

.compiler-switch-help-info {
    background-color: v.$color-settingsbar-bg;
    font-size: 0.85em;
}

.compiler-switch-help-info-click-remove {
    background-color: v.$color-settingsbar-bg;
    font-size: 0.70em;
}
/* ... */

